--- a/BasicSensorsApi/.google/packaging.yaml
+++ b/BasicSensorsApi/.google/packaging.yaml
@@ -5,7 +5,7 @@
 ---
 status:       PUBLISHED
 technologies: [Android, "Google Play services", "Google Fit"]
-categories:   ["Google Play services"]
+categories:   [Fitness]
 languages:    [Java]
 solutions:    [Mobile]
 github:       android/fit
