Updated BasicHistoryApi example for Kotlin
- Migrated to Kotlin
- Added a sign out function
- Updated dependencies and migrated to AndroidX
- Migrated to more recent GoogleSignIn methods, and added check before
  each use of Fit API.

--- a/BasicHistoryApi/app/build.gradle
+++ b/BasicHistoryApi/app/build.gradle
@@ -1,15 +1,17 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         applicationId "com.google.android.gms.fit.samples.basichistoryapi"
         minSdkVersion 14
-        targetSdkVersion 26
-        versionCode 2
-        versionName "1.1"
+        targetSdkVersion 29
+        versionCode 3
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -22,9 +24,11 @@ android {
 dependencies {
     // Note, specific version numbers are managed in gradle.properties. This is preferred since it
     // easily keeps sub-projects on the same versions.
-    implementation "com.google.android.gms:play-services-fitness:11.6.0"
-    implementation "com.google.android.gms:play-services-auth:11.6.0"
-    implementation "com.android.support:appcompat-v7:26.1.0"
-    implementation "com.android.support:design:26.1.0"
+    implementation "com.google.android.gms:play-services-fitness:18.0.0"
+    implementation "com.google.android.gms:play-services-auth:17.0.0"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
