--- a/BasicRecordingApiKotlin/app/src/main/AndroidManifest.xml
+++ b/BasicRecordingApiKotlin/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.android.gms.fit.samples.basicrecordingapi" >
+    package="com.google.android.gms.fit.samples.basicrecordingapikotlin" >
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
     <application
         android:fullBackupContent="false"
@@ -24,12 +26,13 @@ limitations under the License.
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.google.android.gms.fit.samples.basicrecordingapikotlin.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 </manifest>
