--- a/BasicRecordingApiKotlin/app/src/main/AndroidManifest.xml
+++ b/BasicRecordingApiKotlin/app/src/main/AndroidManifest.xml
@@ -26,13 +26,12 @@ limitations under the License.
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.google.android.gms.fit.samples.basicrecordingapikotlin.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 </manifest>
