--- a/StepCounterKotlin/app/src/main/AndroidManifest.xml
+++ b/StepCounterKotlin/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.android.gms.fit.samples.stepcounter">
+    package="com.google.android.gms.fit.samples.stepcounterkotlin">
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.google.android.gms.fit.samples.stepcounterkotlin.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
