--- a/BasicHistoryApiKotlin/app/src/main/AndroidManifest.xml
+++ b/BasicHistoryApiKotlin/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.google.android.gms.fit.samples.basichistoryapikotlin.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
