--- a/StepCounterKotlin/app/src/main/AndroidManifest.xml
+++ b/StepCounterKotlin/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.google.android.gms.fit.samples.stepcounterkotlin.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
